# PS_Model_Selection_Tool

./: .dockerignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: __init__.py  agent.py  main.py  model_evaluator.py
templates/: index.html  index_simple.html
